--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,10 @@
 requires = [
     "setuptools>=42",
     "setuptools_scm[toml]>=3.4",
-    "pybind11>=2.9.0",
+    "wheel",
+    "scikit-build",
+    "cmake",
+    "ninja; platform_system!='Windows'"
 ]
 build-backend = "setuptools.build_meta"
 
