--- a/setup.cfg
+++ b/setup.cfg
@@ -35,11 +35,12 @@ project_urls =
 [options]
 packages = find:
 install_requires =
+    importlib-resources;python_version < "3.9"
     typing-extensions>=3.7;python_version<'3.8'
 python_requires = >=3.7
 include_package_data = True
 package_dir =
-    =src
+    = src
 
 [options.packages.find]
 where = src
