--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ graft src
 graft tests
 
 include LICENSE README.md pyproject.toml setup.py setup.cfg
-global-exclude __pycache__ *.py[cod] .*
+exclude .*
+global-exclude __pycache__ *.py[cod]
