--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,8 @@ where = src
 [options.extras_require]
 dev =
     pytest>=6
+    tbump>=6.7.0
+    twine
 docs =
     Sphinx>=4.0
     myst-parser>=0.13
