fix up macos support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install build tools
+      if: matrix.os == 'macos-latest'
+      run: brew install autoconf automake libtool
+
     - name: Install package
       run: python -m pip install -e .[test]
 
