--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install build tools
-      if: matrix.os == 'macos-latest'
+      if: matrix.runs-on == 'macos-latest'
       run: brew install autoconf automake libtool
 
     - name: Install package
