--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,13 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install build tools
+    - name: Install build tools ${{ matrix.runs-on }}
       if: matrix.runs-on == 'macos-latest'
       run: brew install autoconf automake libtool
+
+    - name: Install build tools ${{ matrix.runs-on }}
+      if: matrix.runs-on == 'windows-latest'
+      run: choco install mingw
 
     - name: Install package
       run: python -m pip install -e .[test]
