--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,19 +25,25 @@ jobs:
         pipx run nox -s pylint
 
   checks:
-    name: Check Python ${{ matrix.python-version }} on ${{ matrix.runs-on }}
-    runs-on: ${{ matrix.runs-on }}
+    name: Check Python ${{ matrix.python-version }} on ${{ matrix.sys.os }}
+    runs-on: ${{ matrix.sys.os }}
     needs: [pre-commit]
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.7", "3.10"]
-        runs-on: [ubuntu-latest, macos-latest, windows-latest]
+        sys:
+          - { os: ubuntu-latest, shell: bash }
+          - { os: macos-latest, shell: bash }
+          - { os: windows-latest, shell: 'msys2 {0}' }
 
         include:
         - python-version: pypy-3.7
-          runs-on: ubuntu-latest
+          sys: { os: ubuntu-latest, shell: bash }
 
+    defaults:
+      run:
+        shell: ${{ matrix.sys.shell }}
 
     steps:
     - uses: actions/checkout@v2
@@ -47,22 +53,17 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - uses: msys2/setup-msys2@v2
+      if: matrix.sys.os == 'windows-latest'
       with:
         update: true
         install: autotools
 
     - name: Install build tools (macos-latest)
-      if: matrix.runs-on == 'macos-latest'
+      if: matrix.sys.os == 'macos-latest'
       run: brew install autoconf automake libtool
 
-    - name: Install package (not-windows)
-      if: matrix.runs-on != 'windows-latest'
+    - name: Install package
       run: python -m pip install -e .[test]
-
-    - name: Install package (windows)
-      if: matrix.runs-on == 'windows-latest'
-      run: python -m pip install -e .[test]
-      shell: msys2 {0}
 
     - name: Test package
       run: python -m pytest -ra
