--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       with:
         update: true
         install: >-
-          autotool
+          autotools
           mingw-w64-x86_64-gcc
           mingw-w64-x86_64-python-pip
           mingw-w64-x86_64-cmake
