--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,13 +61,19 @@ jobs:
           mingw-w64-x86_64-make
           mingw-w64-x86_64-python-pytest
 
+    - name: Install build tools (macos-latest)
+      if: matrix.sys.os == 'macos-latest'
+      run: brew install autoconf automake libtool
+
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install build tools (macos-latest)
-      if: matrix.sys.os == 'macos-latest'
-      run: brew install autoconf automake libtool
+    - name: Check build tools
+      run: >-
+        which cmake
+        which make
+        which autoreconf
 
     - name: Install package
       run: python -m pip install -e .[test]
