--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,11 +55,11 @@ jobs:
         install: >-
           git
           autotools
-          mingw-w64-x86_64-gcc
-          mingw-w64-x86_64-python-pip
-          mingw-w64-x86_64-cmake
-          mingw-w64-x86_64-make
-          mingw-w64-x86_64-python-pytest
+          cmake
+          gcc
+          python-pip
+          make
+          python-pytest
 
     - name: Install build tools (macos-latest)
       if: matrix.sys.os == 'macos-latest'
