--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,9 @@ jobs:
           autotools
           cmake
           gcc
-          python-pip
           make
-          python-pytest
+          #python-pip
+          #python-pytest
 
     - name: Install build tools (macos-latest)
       if: matrix.sys.os == 'macos-latest'
@@ -74,6 +74,7 @@ jobs:
         which cmake
         which make
         which autoreconf
+        which python
 
     - name: Install package
       run: python -m pip install -e .[test]
