--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ write_to = "src/pylibmagic/_version.py"
 [tool.cibuildwheel]
 test-extras = ["test"]
 test-command = "pytest {project}/tests"
+before-all = "apt install autoconf automake"
+
 
 
 [tool.pytest.ini_options]
