--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ before-all = "yum install autoconf automake"
 select = "*-musllinux*"
 before-all = "apk add autoconf automake"
 
+[[tool.cibuildwheel.overrides]]
+select = "*-macosx*"
+before-all = "brew install autoconf automake libtool"
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
