--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = pylibmagic
 description = scikit-build project with CMake for compiling libmagic
-long_description = file: README.md
-long_description_content_type = text/markdown
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/kratsg/pylibmagic
 author = Giordon Stark
 author_email = kratsg@gmail.com
