--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,5 +86,9 @@ jobs:
     - name: Install package
       run: python -m pip install -e .[test]
 
+    - name: Uninstall file (linux)
+      if: matrix.sys.os == 'ubuntu-latest'
+      run: apt remove -y file
+
     - name: Test package
       run: python -m pytest -ra
