--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
 
     - name: Uninstall file (linux)
       if: matrix.sys.os == 'ubuntu-latest'
-      run: sudo apt remove -y file
+      run: sudo apt remove -y file libmagic-mgc libmagic1
 
     - name: Test package
       run: python -m pytest -ra
