--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Check build tools
-      run: >-
+      run: |
         which cmake
         which make
         which autoreconf
@@ -88,7 +88,7 @@ jobs:
 
     - name: Uninstall magic (linux)
       if: matrix.sys.os == 'ubuntu-latest'
-      run: >-
+      run: |
         sudo apt remove -y file libmagic-mgc libmagic1
         sudo rm /etc/ld.so.cache
         ldconfig
