--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,5 +93,5 @@ jobs:
 
     - name: Test package
       run: |
-        python -m pytest -ra -m 'not isolate'
-        python -m pytest -ra tests/test_import.py
+        python -m pytest -ra
+        python -m pytest -ra -m 'isolate' tests/test_import.py
