fix: Add missing magic.mgc (#3)
* add test to make sure we can catch problems with missing magic file

* fix the test

* get things working

* one more cleanup on tests

* add sudo

* really remove it

* need to modify a bit for linux which doesn't  give a full path, lol

* fix

* sigh

* sigh sigh

* add a wrapper class to fix the tests for linux

* add more comments

* fix up typing

* fix up typing, name should not be optional

* fix up more

* finally fixed?

* get it all working?

* fix up workflow more

* fix up

* fix 3.7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,14 @@ before-all = "brew install autoconf automake libtool"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
+addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config", "-m", "not isolate"]
 xfail_strict = true
 filterwarnings = ["error"]
 testpaths = [
     "tests",
+]
+markers = [
+    "isolate",
 ]
 
 
