--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Check build tools
-      run: >-
+      run: |
         which cmake
         which make
         which autoreconf
@@ -86,5 +86,12 @@ jobs:
     - name: Install package
       run: python -m pip install -e .[test]
 
+    - name: Uninstall magic (linux)
+      if: matrix.sys.os == 'ubuntu-latest'
+      run: |
+        sudo apt remove -y file libmagic-mgc libmagic1
+
     - name: Test package
-      run: python -m pytest -ra
+      run: |
+        python -m pytest -ra
+        python -m pytest -ra -m 'isolate' tests/test_import.py
