--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,13 +59,21 @@ jobs:
         update: true
         install: >-
           mingw-w64-x86_64-git
+          mingw-w64-x86_64-toolchain
           mingw-w64-x86_64-autotools
           mingw-w64-x86_64-cmake
           mingw-w64-x86_64-gcc
           mingw-w64-x86_64-make
           mingw-w64-x86_64-python-pip
+          python-setuptools
           mingw-w64-x86_64-python-pytest
           mingw-w64-x86_64-ninja
+          git
+          automake1.16
+          automake-wrapper
+          autoconf
+          libtool
+          make
 
     - name: Install build tools (macos-latest)
       if: matrix.sys.os == 'macos-latest'
