--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,9 +86,13 @@ jobs:
     - name: Check build tools
       run: |
         which cmake
+        cmake --version
         which make
+        make --version
         which autoreconf
+        autoreconf --version
         which python
+        python --version
 
     - name: Install package
       run: python -m pip install -e .[test]
