--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,14 @@ jobs:
         python --version
 
     - name: Install package
+      if: matrix.sys.os != 'windows-latest'
       run: python -m pip install -e .[test]
+
+    - name: Install package
+      if: matrix.sys.os == 'windows-latest'
+      run: |
+        export PATH="/mingw64/bin:/usr/bin:/bin:/usr/local/bin:/opt/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:$PATH"
+        python -m pip install -e .[test]
 
     - name: Uninstall magic (linux)
       if: matrix.sys.os == 'ubuntu-latest'
