--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
           automake1.16
           automake-wrapper
           autoconf
+          autoconf-wrapper
           libtool
           make
 
@@ -107,7 +108,6 @@ jobs:
       if: matrix.sys.os == 'windows-latest'
       run: |
         dir D:/a/_temp/msys64/usr/bin/
-        ls D:/a/_temp/msys64/usr/bin/
         export PATH="/mingw64/bin:/usr/bin:/bin:/usr/local/bin:/opt/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:$PATH"
         python -m pip install -e .[test]
 
