--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,7 @@ jobs:
       run: |
         dir D:/a/_temp/msys64/usr/bin/
         export PATH="/mingw64/bin:/usr/bin:/bin:/usr/local/bin:/opt/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl:$PATH"
+        export GHA_WINDOWS=yes
         python -m pip install -e .[test]
 
     - name: Uninstall magic (linux)
