--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = [
     "setuptools>=42",
     "setuptools_scm[toml]>=3.4",
     "wheel",
-    "scikit-build",
+    "scikit-build @ git+https://github.com/kratsg/scikit-build.git@fix/manifest#egg=scikit-build",
     "cmake",
     "ninja; platform_system!='Windows'"
 ]
