--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,9 @@ jobs:
         which python
 
     - name: Install package
-      run: python -m pip install -e .[test]
+      run: |
+        python -m pip install -U pip setuptools
+        python -m pip install -e .[test]
 
     - name: Uninstall magic (linux)
       if: matrix.sys.os == 'ubuntu-latest'
