--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
     - name: Install package
       run: |
         python -m pip install -U pip setuptools
-        python -m pip install -e .[test]
+        python -m pip install .[test]
 
     - name: Uninstall magic (linux)
       if: matrix.sys.os == 'ubuntu-latest'
