--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ on:
     - main
     - develop
 
+concurrency:
+  group: ${ github.workflow }-${ github.head_ref }
+  cancel-in-progress: true
+
 jobs:
   pre-commit:
     name: Format
