--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,13 +43,14 @@ log_cli_level = "INFO"
 [tool.pycln]
 all = true
 
-
 [tool.mypy]
 files = "src"
-python_version = "3.9"
+python_version = "3.7"
 warn_unused_configs = true
 strict = true
-
+show_error_codes = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
+warn_unreachable = true
 
 [tool.check-manifest]
 ignore = [
