fix up flake and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ where = src
 [options.extras_require]
 dev =
     pytest>=6
+    pytest-cov>=3
     tbump>=6.7.0
     twine
 docs =
@@ -57,11 +58,12 @@ docs =
     sphinx-copybutton
 test =
     pytest>=6
+    pytest-cov>=3
     python-magic
 
 [flake8]
 extend-ignore = E203, E501, E722, B950
-select = C,E,F,W,T,B,B9,I
+extend-select = B9
 per-file-ignores =
     tests/*: T
     noxfile.py: T
