--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,6 @@
 requires = [
     "setuptools>=42",
     "setuptools_scm[toml]>=3.4",
-    "wheel",
     "scikit-build",
     "cmake",
     "ninja; platform_system!='Windows'"
@@ -38,18 +37,20 @@ testpaths = [
 markers = [
     "isolate",
 ]
+log_cli_level = "INFO"
 
 
 [tool.pycln]
 all = true
 
-
 [tool.mypy]
 files = "src"
-python_version = "3.9"
+python_version = "3.7"
 warn_unused_configs = true
 strict = true
-
+show_error_codes = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
+warn_unreachable = true
 
 [tool.check-manifest]
 ignore = [
