--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -65,12 +65,13 @@ jobs:
       - uses: getsentry/action-wait-for-cirrus@v1.0.0
         with:
           task: ${{ matrix.task }}
+          dest: wheelhouse
         timeout-minutes: 30
 
       - uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.name }}
-          path: dist/*.whl
+          path: wheelhouse/*.whl
 
   merge_all:
     needs: [build_wheels, make_sdist, download_cirrus]
