--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,70 @@
 [build-system]
-requires = [
-    "setuptools>=42",
-    "setuptools_scm[toml]>=3.4",
-    "scikit-build",
-    "cmake",
-    "ninja; platform_system!='Windows'"
+requires = ["scikit-build-core[pyproject]"]
+build-backend = "scikit_build_core.build"
+
+[project]
+name = "pylibmagic"
+dynamic = ["version"]
+description = "scikit-build project with CMake for compiling libmagic"
+readme = "README.rst"
+requires-python = ">=3.7"
+authors = [
+    { name = "Giordon Stark", email = "kratsg@gmail.com" },
 ]
-build-backend = "setuptools.build_meta"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: BSD License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Scientific/Engineering",
+]
+dependencies = [
+    "importlib-resources;python_version<'3.9'",
+    "typing-extensions>=3.7;python_version<'3.8'",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest-cov>=3",
+    "pytest>=6",
+    "tbump>=6.7.0",
+    "twine",
+]
+docs = [
+    "myst-parser>=0.13",
+    "sphinx-book-theme>=0.1.0",
+    "sphinx-copybutton",
+    "Sphinx>=4.0",
+]
+test = [
+    "pytest-cov>=3",
+    "pytest>=6",
+    "python-magic",
+]
+
+[project.urls]
+"Bug Tracker" = "https://github.com/kratsg/pylibmagic/issues"
+Changelog = "https://github.com/kratsg/pylibmagic/releases"
+Discussions = "https://github.com/kratsg/pylibmagic/discussions"
+Documentation = "https://pylibmagic.readthedocs.io/"
+Homepage = "https://github.com/kratsg/pylibmagic"
+
+[tool.scikit-build]
+metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
+sdist.include = ["src/pylibmagic/_version.py"]
+wheel.install-dir = "pylibmagic"
+minimum-version = "0.3"
+wheel.py-api = "py3"
+wheel.expand-macos-universal-tags = true
 
 [tool.setuptools_scm]
 write_to = "src/pylibmagic/_version.py"
@@ -17,6 +75,7 @@ test-extras = ["test"]
 test-command = "pytest {project}/tests"
 archs = ["auto64"]
 before-all = "yum install autoconf automake"
+build = ["cp310-*"]
 
 [[tool.cibuildwheel.overrides]]
 select = "*-musllinux*"
