--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,4 +1,5 @@
 build_and_store_wheels: &BUILD_AND_STORE_WHEELS
+  only_if: $CIRRUS_BRANCH == 'main' || $CIRRUS_TAG != '' || $CIRRUS_PR != ''
   install_cibuildwheel_script:
     - python -m pip install cibuildwheel==2.12.3
   run_cibuildwheel_script:
