use the release tag name instead of the commit sha for checking the github api to perhaps prevent concurrency

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -67,6 +67,7 @@ jobs:
         with:
           task: ${{ matrix.task }}
           dest: wheelhouse
+          commit: ${{ github.event.release.tag_name }}
         timeout-minutes: 30
 
       - uses: actions/upload-artifact@v3
