--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           task: ${{ matrix.task }}
           dest: wheelhouse
-          commit: ${{ github.event.release.tag_name }}
+          commit: ${{ github.event.release.tag_name || github.sha }}
         timeout-minutes: 30
 
       - uses: actions/upload-artifact@v3
